@@ -57,6 +57,16 @@ MeasureBase::MeasureBase(const MeasureBase& m)
       }
 
 //---------------------------------------------------------
+//   MeasureBase
+//---------------------------------------------------------
+
+MeasureBase::~MeasureBase()
+      {
+      foreach(Element* e, _el)
+            delete e;
+      }
+
+//---------------------------------------------------------
 //   scanElements
 //---------------------------------------------------------
 
