@@ -75,6 +75,7 @@ class MeasureBase : public Element {
 
    public:
       MeasureBase(Score* score);
+      ~MeasureBase();
       MeasureBase(const MeasureBase&);
       virtual MeasureBase* clone() const = 0;
 
